<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">
    <group android:id="@+id/first_panel"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/action_profile" />
    </group>
    <group android:id="@+id/second_panel"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_add_driver"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/action_add_driver" />
        <item
            android:id="@+id/action_add_student"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/action_add_student" />
        <item
            android:id="@+id/action_add_bus"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/action_add_bus" />
    </group>
    <group android:id="@+id/third_panel"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_sign_out"
            android:icon="@drawable/ic_sync_disabled_black_24dp"
            android:title="@string/action_sign_out" />
    </group>
</menu>